appId: com.yourcompany.myrnapp
---
- launchApp
- tapOn:
    id: emailInput
- inputText:
    id: emailInput
    text: test@example.com
- tapOn:
    id: passwordInput
- inputText:
    id: passwordInput
    text: "12345"
- tapOn:
    id: loginButton
- assertVisible:
    id: successMessage
